--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <nav class="navbar">
     <div class="nav">
       <span class="logo"></div>
-      <a href="#">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="html/about.html">ABOUT</a>
       <a href="html/resources.html">RESOURCES</a>
       <a href="html/projects.html">PROJECTS</a>
