--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="nav">
       <span class="logo"></div>
       <a href="index.html">HOME</a>
-      <a href="html/about.html">ABOUT</a>
-      <a href="html/resources.html">RESOURCES</a>
-      <a href="html/projects.html">PROJECTS</a>
+      <a href="about.html">ABOUT</a>
+      <a href="resources.html">RESOURCES</a>
+      <a href="projects.html">PROJECTS</a>
       <a href="https://ucedna.com/">CALeDNA</a>
       <div id="indicator"></div>
       <div class="search-box">
