--- a/projects.html
+++ b/projects.html
@@ -9,10 +9,10 @@
   <nav class="navbar">
     <div class="nav">
       <span class="logo"></div>
-      <a href="#">HOME</a>
-      <a href="html/about.html">ABOUT</a>
-      <a href="html/resources.html">RESOURCES</a>
-      <a href="html/projects.html">PROJECTS</a>
+      <a href="index.html">HOME</a>
+      <a href="about.html">ABOUT</a>
+      <a href="resources.html">RESOURCES</a>
+      <a href="projects.html">PROJECTS</a>
       <a href="https://ucedna.com/">CALeDNA</a>
       <div id="indicator"></div>
       <div class="search-box">
