--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <span class="articlesubtitle">SCIENCE ROBOTICS | 18 Jan 2023</span>
       </div></div>
       <div class="morearticles">
-        <span><a style="color:inherit; font-size:12px; text-decoration: underline;" href="#"> MORE ARTICLES  </a></div></span>
+        <span><a style="color:inherit; font-size:12px; text-decoration: underline; font-family: Verdana, Geneva, Tahoma, sans-serif;" href="articles.html"> MORE ARTICLES  </a></div></span>
       </div>
 
     </div>
