--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </div>
                         <figcaption>
                             RUSSIAN RIVER PROJECT
-                            <div class="caption"> A analysis of the Russian River Ecosystem in Northern California. Data collected by the Meyer Lab and analyzed by Biomolecular Engineering</div>
+                            <div class="caption"> An analysis of the Russian River Ecosystem in Northern California. Data collected by the Meyer Lab and analyzed by Biomolecular Engineering</div>
                             <span class="credit">UCSC EEB & BME</span>
                         </figcaption>
                     </figure>
